--- a/assets/sass/_styles.scss
+++ b/assets/sass/_styles.scss
@@ -27,6 +27,7 @@ a.footnote:after {
 
 .katex-display {
     overflow-x: auto;
+    overflow-y: hidden;
 }
 
 //to color titlehilight
